<resources>
    <string name="app_name">畅聊</string>
    <string name="splash_title">畅聊，你我更接近</string>
    <string name="please_login">请登录</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="forgot_your_password">忘记密码？</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_register">请注册</string>
    <string name="register">注册</string>
    <string name="not_empty_user_name_or_password">输入的用户名或密码不能为空！</string>
    <string name="login_success">登录成功！</string>
    <string name="login_failure">登录失败！</string>
    <string name="register_success">注册成功！</string>
    <string name="register_failure">注册失败！</string>
    <string name="confirm_error">您两次输入的密码不一致！</string>
    <string name="message">消息</string>
    <string name="contacts">联系人</string>
    <string name="logout">退出</string>
    <string name="logout_success">退出成功！</string>
    <string name="logout_failure">退出失败！</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="new_friend">新的朋友</string>
    <string name="add_new_friend">添加好友</string>
    <string name="back">返回</string>
    <string name="add">添加</string>
    <string name="input_user_name">请输入用户名进行查找</string>
    <string name="not_empty_user_name">输入的用户名不能为空！</string>
    <string name="no_user">查无此人！</string>
    <string name="send_invitation_success">成功发送邀请！</string>
    <string name="send_invitation_failure">发送邀请失败！</string>
    <string name="group_chat">群聊</string>
    <string name="invitation_list">邀请信息列表</string>
    <string name="accept">接受</string>
    <string name="reject">拒绝</string>
    <string name="add_a_friend">添加你为好友</string>
    <string name="accept_invitation">接受邀请</string>
    <string name="invitation_accepted">你的邀请被接受</string>
    <string name="accept_a_invitation">接受了好友邀请</string>
    <string name="accept_a_invitation_failure">接受好友邀请失败</string>
    <string name="reject_a_invitation">拒绝了好友邀请</string>
    <string name="reject_a_invitation_failure">拒绝好友邀请失败</string>
    <string name="delete_this_contact">删除该联系人</string>
    <string name="delete">删除</string>


    <string name="group_list">群组列表</string>
    <string name="create_group">创建群组</string>
    <string name="load_group_list_success">加载群列表成功</string>
    <string name="load_group_list_failure">加载群列表失败</string>
    <string name="a_group_name">群组名称</string>
    <string name="group_intro">群组简介</string>
    <string name="is_public">是否公开</string>
    <string name="is_open_group_invitation">是否开放群邀请</string>
    <string name="create">创建</string>
    <string name="group_application">申请加入群</string>
    <string name="create_group_failure">创建群失败！</string>
    <string name="create_group_success">创建群成功！</string>
    <string name="select_contact">选择联系人</string>
    <string name="save_it">保存</string>
    <string name="group_application_accepted">您的群申请已经被接受</string>
    <string name="group_invite_accepted">您的群邀请已经被接收</string>
    <string name="group_application_declined">你的群申请已经被拒绝</string>
    <string name="group_invite_declined">您的群邀请已经被拒绝</string>
    <string name="new_group_invite">您收到了群邀请</string>
    <string name="new_group_application">您收到了群申请</string>
    <string name="group_accept_invite">你接受了群邀请</string>
    <string name="group_accept_application">您批准了群加入</string>
    <string name="accept_group_invitation">接受了群邀请</string>
    <string name="accept_group_invitation_failure">接受群邀请失败</string>
    <string name="reject_group_invitation">拒绝了群邀请</string>
    <string name="reject_group_invitation_failure">拒绝群邀请失败</string>
    <string name="accept_group_application">接受了群申请</string>
    <string name="accept_group_application_failure">接受群申请失败</string>
    <string name="reject_group_application">拒绝了群申请</string>
    <string name="reject_group_application_failure">拒绝群申请失败</string>
    <string name="group_detail">群详情</string>
    <string name="leave_group">退群</string>
    <string name="destroy_group">解散群</string>
    <string name="leave_group_success">退群成功！</string>
    <string name="destroy_group_success">解散群成功！</string>
    <string name="leave_group_failure">退群失败！</string>
    <string name="destroy_group_failure">解散群失败！</string>
    <string name="get_group_detail_failure">获取群信息失败！</string>
    <string name="delete_member_failure">删除群成员失败！</string>
    <string name="delete_member_success">删除群成员成功！</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>

</resources>
